# Triangles

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  problem.py  test.cpp  type_test
include/: bounding_objs.hpp  double_comparison.hpp  lingeo.hpp  maths.hpp  octree.hpp  point.hpp  triangle.hpp  vector.hpp
include/intersections/: triangles_2D.hpp
include/maths/: maths.hpp
include/primitives/: point.hpp
test/: CMakeLists.txt
test/end_to_end/: CMakeLists.txt  check_triangles_intersection.py  deleter.sh  generating_tests.py  main.cpp  tester.sh
test/end_to_end/tests/: test_0.txt
test/include/dividing_space/: bounding_objs.hpp  octree.hpp  shape.hpp
test/include/intersections/: intersection_driver.hpp  triangles_2D.hpp  triangles_3D.hpp
test/include/primitives/: triangle.hpp  vector.hpp
test/test/: CMakeLists.txt
test/test/end_to_end/: check_triangles_intersection.py  generating_tests.py  main.cpp
test/test/unit/: CMakeLists.txt  numbers.cpp  triangle.cpp  triangle_triangle.cpp
test/unit/: CMakeLists.txt  numbers.cpp  point.cpp  triangle.cpp  triangle_triangle.cpp
